--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,14 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body{
+  /*background-image: url('https://images.pexels.com/photos/220213/pexels-photo-220213.jpeg?cs=srgb&dl=water-drop-photo-220213.jpg&fm=jpg');
+  */
+  background-size: cover;
+  height: 100vh;
+  background-position: center;
 }
+
 
 .App-link {
   color: #61dafb;
