--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,8 +1,15 @@
 h1{
     font-family: 'Roboto', sans-serif;
     letter-spacing: .1em;
-    color:rgb(50, 80, 46);
+    color:black;
     font-size: 2em;
+    margin-top:100px;
+
+}
+
+.available-popup{
+    color: red;
+    display:none;
 }
 
 .corky-image{
@@ -12,10 +19,14 @@ h1{
     background-position: center;
 }
 
+.picture-caption{
+    text-align:center;
+}
+
 h2{
 font-family: roboto;
     font-weight: 100;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
     font-size: 2em;
 }
 
@@ -26,13 +37,18 @@ font-family: roboto;
     padding-top:5%;
 }
 p{
-letter-spacing: .05em;
-    padding: 10%;
+    letter-spacing: .05em;
+    padding: 2%;
     text-align: left;
     line-height: 1.7em;
     font-family: roboto;
-    width:60%;
-    margin-left:10%;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.about-book{
+    font-size: 10pt;
+
 }
 .overlay{
 height: 90vh;
@@ -40,10 +56,10 @@ background-color: #00000066;
 }
 .overlayText {
     color: white;
-    padding-top: 200px;
-    font-size: 18pt;
-    margin-left:0;
-    margin-right:0;
+    padding-top: 400px;
+    font-size: 14pt;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .emphasize-text{
@@ -61,19 +77,32 @@ background-color: #00000066;
 }
 
 .bookCoverDiv{
-    padding-top:5%;
+    padding-top:2%;
 }
 @media screen and (min-width: 800px){
+    h1{
+        font-size: 3em;
+    }
     .overlayText {
     
-        padding-top: 400px;
-      
+        padding-top: 500px;
+        font-size:16pt;
     }
 
     .picDescriptionBox{
     flex-direction: row;
     }
     .bookCoverDiv{
-        padding-left:20%;
+        padding-left:10%;
+        padding-right:10%;
+    }
+
+    .bookImage{
+        width: 300px;
+        height: 450px;
+    }
+    .about-book{
+        font-size:12pt;
+        width:60%;
     }
 }
