moved quote and speaker closer

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -76,6 +76,14 @@ background-color: #00000066;
     font-style: italic;
 }
 
+h4{
+    margin-top: 0px;
+}
+
+.quote{
+    margin-bottom: 0px;
+}
+
 .bookCoverDiv{
     padding-top:2%;
 }
