--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -72,6 +72,14 @@ background-color: #00000066;
    flex-direction:column;
 }
 
+.prefLink{
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14pt;
+    color: black;
+    padding-bottom: 100px;
+}
+
 .italic{
     font-style: italic;
 }
