--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -10,6 +10,14 @@ h1{
 .available-popup{
     color: red;
     font-size: 20pt;
+    width: 60%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+}
+.available-popup:hover{
+background-color: peachpuff;
 }
 
 .corky-image{
@@ -21,6 +29,7 @@ h1{
 
 .picture-caption{
     text-align:center;
+    padding-bottom: 150px;
 }
 
 h2{
@@ -77,7 +86,7 @@ background-color: #00000066;
     font-family: 'Roboto', sans-serif;
     font-size: 14pt;
     color: black;
-    padding-bottom: 100px;
+    
 }
 
 .italic{
